<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    tools:context=".MainActivity">



    <EditText
        android:id="@+id/text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:layout_marginTop="20dp"
        android:editable="false"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/seven"
            android:onClick="btn7"
            />

        <Button
            android:id="@+id/btn8"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/eight"
            android:onClick="btn8"
            />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"

            android:text="@string/nine"
            android:onClick="btn9"
            />

        <Button
            android:id="@+id/btndiv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginTop="20dp"

            android:text="@string/div"
            android:onClick="btndiv"
            />
        <Button
            android:id="@+id/btnback"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginTop="20dp"
            android:onClick="btndel"
            android:text="@string/del"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/four"
            android:onClick="btn4"
            />

        <Button
            android:id="@+id/btn5"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/five"
            android:onClick="btn5"
            />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"

            android:text="@string/six"
            android:onClick="btn6"
            />

        <Button
            android:id="@+id/btnmul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginTop="20dp"

            android:text="@string/mul"
            android:onClick="btnmul"
            />
        <Button
            android:id="@+id/btnclear"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginTop="20dp"

            android:text="@string/clear"
            android:onClick="btnclear"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/one"
            android:onClick="btn1"
            />

        <Button
            android:id="@+id/btn2"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/two"
            android:onClick="btn2"
            />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"

            android:text="@string/three"
            android:onClick="btn3"
            />

        <Button
            android:id="@+id/btnsub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginTop="20dp"

            android:text="@string/sub"
            android:onClick="btnsub"
            />
        <Button
            android:id="@+id/btnadd"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginTop="20dp"

            android:text="@string/add"
            android:onClick="btnadd"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnzero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/zero"
            android:onClick="btnzero"

            />

        <Button
            android:id="@+id/btndot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/dot"
            android:onClick="btndot"

            />

        <Button
            android:id="@+id/btnequals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/equal"
            android:onClick="btnequal"
            />







    </LinearLayout>

</RelativeLayout>